# AdvancedPythonForMaya

./: .gitignore  README.md
Commands/: README.md  decorators.py  distributeCmd.py  helloWorldCmd.py
Compiling/: README.md
Compiling/minMaxPlugin/: CMakeLists.txt
Compiling/minMaxPlugin/modules/: FindMaya.cmake
Compiling/minMaxPlugin/source/: minMax.cpp  minMax.h
HelloWorld/: helloWorldCmd.py
Intro/: README.md  simple.py  standalone.py
Nodes/: README.md  minMaxNode.py  pushDeformer.py
Scene/: AEcharacterRootTemplate.mel  AEcustomLocatorTemplate.mel  README.md  characterRoot.py  customLocator.py
Utilities/: README.md  callbackManager.py  contextExamples.py  createdNodesContext.py
